public/css/style.css
/******** RESET ********/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/******** BASE ********/

body {
    background-color: #F5F3EF;
    max-width: 1440px;
    margin: auto;
    font-family: "Inter", sans-serif;
    color: #292929;
}

h1 {
    font-family: "Playfair Display", serif;
    font-size: 36px;
    font-weight: 400;
}

p, h2 {
    font-size: 16px;
    font-weight: 400;
}

a {
    text-decoration: none;
    color: inherit;
    font-size: 14px;
}

/******** UTILITIES ********/

.flex {
    display: flex;
}

.flex-col {
    display: flex;
    flex-direction: column;
}

.flex-center{
    display: flex;
    justify-content: center;
}

.gap-1 { 
    gap: 1em; 
}

.gap-2 { 
    gap: 2em; 
}

.gap-3 { 
    gap: 3em; 
}

.gap-5 {
    gap: 5em;
}

/******** COMPONENTS ********/

.card {
    background-color: #FFFFFF;
    border-radius: 10px;
}

.btn {
    font-size: 16px;
    font-weight: 600;
    padding: 25px;
    border-radius: 10px;
    border: none;
    cursor: pointer;
    transition: 0.3s;
    width: max-content;
}

.btn-primary {
    background-color: #00AC66;
    color: white;
}

.btn-primary:hover {
    background-color: #006D41;
}

.btn-outline {
    border: 1px solid #00AC66;
    background-color: transparent;
    color: #00AC66;
}

.btn-outline:hover {
    background-color: #006D41;
    color: white;
}

/******** HEADER ********/

#nav-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px 10%;
}

.nav-group {
    display: flex;
    align-items: center;
    gap: 40px;
}

.nav-group a {
    display: flex;
    align-items: center;
    gap: 5px;
    transition: 0.3s;
}

.nav-group a:hover{
    font-weight: 600;
}

.logo-site {
    width: 155px;
}

/******** FOOTER ********/

#nav-footer {
    background-color: #FFFFFF;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 50px;
    padding: 20px 10%;
}

#nav-footer a {
    font-weight: 300;
    font-size: 12px;
}

#logo-footer img {
    width: 22px;
}

/******** INTRO ********/

#section-introduction {
    display: flex;
    justify-content: center;
    padding: 5em;
}

.intro-container {
    display: flex;
    align-items: center;
    gap: 60px;
}

.intro-text {
    max-width: 340px;
}

.intro-image img {
    display: block;
}

.legend {
    text-align: end;
    color: #A6A6A6;
    font-size: 12px;
    font-style: italic;
    padding: 10px;
}

#privacy-policy {
    padding: 10px;
}

#legal-mentions {
    padding: 10px;
}

/******** LAST BOOKS ********/

#section-last-add {
    background-color: #FAF9F7;
    align-items: center;
    padding: 5em;
}

.books-container {
    display: flex;
    gap: 2em;
}

.book-card {
    width: 200px;
}

.book-card img {
    width: 100%;
    height: 200px;
    object-fit: cover;
}

.book-content {
    padding: 15px;
}

.book-author {
    font-size: 14px;
    color: #A6A6A6;
}

.book-mention {
    font-size: 10px;
    color: #A6A6A6;
    font-style: italic;
    padding: 15px;
}

/******** PITCH ********/

#section-pitch {
    align-items: center;
    padding: 5em;
}

.pitch-desc {
    width: 25em;
    text-align: center;
    font-weight: 300;
}

.pitch-cards {
    display: flex;
    gap: 2em;
}

.pitch-card {
    width: 215px;
    height: 139px;
    text-align: center;
    padding: 1em;
    display: flex;
    align-items: center;
}

/******** BANNER ********/

#banner img {
    width: 100%;
    height: 230px;
    object-fit: cover;
    object-position: center 40%;
}

/******** VALUES ********/

#section-values {
    width: 650px;
    margin: auto;
    padding: 8em;
}

.values-container {
    position: relative;
}

.values-text p {
    font-size: 16px;
    font-weight: 300;
}

.signature {
    font-size: 12px;
    font-style: italic;
    color: #A6A6A6;
}

.corner-img {
    position: absolute;
    bottom: -4em;
    right: -4em;
}


/******** PAGE DE LOG ********/

input {
    height: 50px;
}

.article-log-form {
    display: flex;
    justify-content: center;
    flex: 1;
    align-items: center;
}

.article-log-form form {
    display: flex;
    flex-direction: column;
    width: fit-content;
    padding: 5px;
    gap: 10px;
}

.article-log-form form label {
    color: #A6A6A6;
    font-size: 14px;
    font-weight: 400;
}

.article-log-form form input {
    height: 50px;
    width: 322px;
    border: 1px solid #F0F0F0;
    border-radius: 5px;
    margin-bottom: 20px;
    padding: 5px;
}

.article-log-form form button {
    width: 100%;
}

.article-log-form form p {
    font-size: 14px;
    font-weight: 400;
}

.article-log-form form a {
    text-decoration: underline;
}

#article-img img {
    width: 720px;
    height: 886px;
}

#article-img {
    flex: 1;
}



#section-allBooks {
    margin: 3em;
}

/******** PAGE ALLBOOKS ********/

#section-allBooks .books-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    width: fit-content;
    margin: auto;
}

#section-allBooks #section-header {
    display: flex;
    justify-content: space-evenly;
    gap: 7em;
}

#section-allBooks #section-header input {
    background-color: #FFFFFF;
    border: 1px solid #F0F0F0;
    border-radius: 5px;
    padding: 0.6rem 0.6rem 0.6rem 2.5rem;
}

#section-allBooks #section-header input::placeholder {
    color: #A6A6A6;
    font-size: 14px;
    font-weight: 400;
}

#section-allBooks #section-header input:focus::placeholder {
    color: transparent;
}

#section-header form {
    position: relative;
}

#section-header form button {
    position: absolute;
    left: 8px;
    top: 30%;
    border: none;
    background: none;
    cursor: pointer;
}


/******** PAGE BOOKDETAILS ********/

#section-details {
    background-color: #FAF9F7;
}

#book-cover img {
    width: 720px;
    height: 863px;
}

#book-article span {
    width: 27px;
    border: 1px solid #A6A6A6;
}

#book-article {
    justify-content: space-around;
    padding: 5em;
    padding-bottom: 0px;
    padding-top: 0px;
}

#book-article h2 {
    font-weight: 600;
    font-size: 8px;
    color: #292929;
}

#description p {
    white-space: pre-line;
    font-weight: 400;
    font-size: 14px;
    color: #292929;
}

#title-author p {
    font-size: 16px;
    font-weight: 400;
    color: #A6A6A6;
}

#book-article button {
    width: 100%;
}

#nav-pre-section {
    margin-left: 12em;
    padding: 2em;
}

#nav-pre-section, #nav-pre-section a {
    font-size: 10px;
    font-weight: 300;
    color: #A6A6A6;
}

#owner-div div {
    display: flex;
    flex-direction: row;
    gap: 1em;
    align-items: center;
    padding: 4px;
    background-color: #FFFFFF;
    border-radius: 20px;
    width: fit-content;
}

#owner-div img {
    width: 50px;
    height: 50px;
    object-fit: cover;
    border-radius: 50%;
}

#owner-div p {
    padding: 1em;
}

